--- a/idh/src/output.css
+++ b/idh/src/output.css
@@ -579,6 +579,10 @@ video {
   margin-right: auto;
 }
 
+.-mb-10 {
+  margin-bottom: -2.5rem;
+}
+
 .-ml-20 {
   margin-left: -5rem;
 }
@@ -615,20 +619,20 @@ video {
   margin-bottom: 2rem;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
 .ml-auto {
   margin-left: auto;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
 }
 
 .mr-4 {
   margin-right: 1rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .inline-block {
@@ -651,6 +655,10 @@ video {
   display: none;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
 .h-12 {
   height: 3rem;
 }
@@ -659,16 +667,12 @@ video {
   height: 14rem;
 }
 
-.h-5 {
-  height: 1.25rem;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
 .h-8 {
   height: 2rem;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-12 {
@@ -689,10 +693,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-3 {
-  width: 0.75rem;
 }
 
 .max-w-lg {
@@ -739,10 +739,6 @@ video {
   justify-content: space-between;
 }
 
-.gap-16 {
-  gap: 4rem;
-}
-
 .gap-5 {
   gap: 1.25rem;
 }
@@ -763,9 +759,23 @@ video {
   border-width: 1px;
 }
 
+.border-t {
+  border-top-width: 1px;
+}
+
+.border-gray-800 {
+  --tw-border-opacity: 1;
+  border-color: rgb(66 66 66 / var(--tw-border-opacity));
+}
+
+.bg-deep-purple-accent-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 18 107 / var(--tw-bg-opacity));
+}
+
 .bg-gray-900 {
   --tw-bg-opacity: 1;
-  background-color: rgb(33 33 33 / var(--tw-bg-opacity));
+  background-color: rgb(234 105 139 / var(--tw-bg-opacity));
 }
 
 .bg-indigo-50 {
@@ -775,7 +785,7 @@ video {
 
 .bg-teal-accent-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(29 233 182 / var(--tw-bg-opacity));
+  background-color: rgb(234 105 139 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -802,6 +812,11 @@ video {
   padding-right: 1rem;
 }
 
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
@@ -817,13 +832,26 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.py-9 {
+  padding-top: 2.25rem;
+  padding-bottom: 2.25rem;
+}
+
 .py-px {
   padding-top: 1px;
   padding-bottom: 1px;
 }
 
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
 .pt-16 {
   padding-top: 4rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .text-center {
@@ -928,12 +956,17 @@ video {
 
 .text-deep-purple-accent-400 {
   --tw-text-opacity: 1;
-  color: rgb(101 31 255 / var(--tw-text-opacity));
+  color: rgb(71 18 107 / var(--tw-text-opacity));
 }
 
 .text-gray-100 {
   --tw-text-opacity: 1;
   color: rgb(245 245 245 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(158 158 158 / var(--tw-text-opacity));
 }
 
 .text-gray-600 {
@@ -953,7 +986,12 @@ video {
 
 .text-gray-900 {
   --tw-text-opacity: 1;
-  color: rgb(33 33 33 / var(--tw-text-opacity));
+  color: rgb(234 105 139 / var(--tw-text-opacity));
+}
+
+.text-slate-50 {
+  --tw-text-opacity: 1;
+  color: rgb(248 250 252 / var(--tw-text-opacity));
 }
 
 .text-teal-900 {
@@ -961,9 +999,20 @@ video {
   color: rgb(0 77 64 / var(--tw-text-opacity));
 }
 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -981,29 +1030,23 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-shadow {
-  transition-property: box-shadow;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .duration-200 {
   transition-duration: 200ms;
 }
 
-.duration-300 {
-  transition-duration: 300ms;
+.hover\:bg-deep-purple-accent-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 18 107 / var(--tw-bg-opacity));
+}
+
+.hover\:text-deep-purple-800:hover {
+  --tw-text-opacity: 1;
+  color: rgb(69 39 160 / var(--tw-text-opacity));
 }
 
 .hover\:text-deep-purple-accent-400:hover {
   --tw-text-opacity: 1;
-  color: rgb(101 31 255 / var(--tw-text-opacity));
-}
-
-.hover\:shadow-xl:hover {
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  color: rgb(71 18 107 / var(--tw-text-opacity));
 }
 
 .focus\:shadow-outline:focus {
@@ -1027,8 +1070,8 @@ video {
     display: block;
   }
 
-  .sm\:h-64 {
-    height: 16rem;
+  .sm\:h-80 {
+    height: 20rem;
   }
 
   .sm\:h-96 {
@@ -1071,20 +1114,20 @@ video {
     display: block;
   }
 
-  .md\:h-80 {
-    height: 20rem;
+  .md\:h-96 {
+    height: 24rem;
   }
 
   .md\:max-w-full {
     max-width: 100%;
   }
 
-  .md\:max-w-md {
-    max-width: 28rem;
-  }
-
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .md\:justify-center {
+    justify-content: center;
   }
 
   .md\:border-r {
@@ -1103,10 +1146,6 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:col-span-2 {
-    grid-column: span 2 / span 2;
-  }
-
   .lg\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -1124,16 +1163,12 @@ video {
     margin-bottom: 0px;
   }
 
-  .lg\:mb-6 {
-    margin-bottom: 1.5rem;
-  }
-
   .lg\:hidden {
     display: none;
   }
 
-  .lg\:h-96 {
-    height: 24rem;
+  .lg\:h-auto {
+    height: auto;
   }
 
   .lg\:w-1\/2 {
@@ -1160,20 +1195,12 @@ video {
     max-width: 1280px;
   }
 
-  .lg\:max-w-sm {
-    max-width: 24rem;
-  }
-
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-6 {
-    grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 
   .lg\:flex-row {
